--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -225,59 +225,7 @@
                 }
             })
         });
-
-        {% if pagination.choice is defined %}
-
-        $('.paginationChoice').change(function () {
-            var id = $(this).prop('id');
-            id = id.replace('pagination_choice_', '');
-
-            var checked = $(this).is(':checked');
-            if (checked) {
-                if (id == 'student') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['student'][1]) }}');
-                    $('#pagination_choice_staff').prop('checked', false);
-                    $('#pagination_choice_all').prop('checked', false);
-                    $('#pagination_choice_contact').prop('checked', false);
-                }
-                if (id == 'all') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['all'][1]) }}');
-                    $('#pagination_choice_staff').prop('checked', false);
-                    $('#pagination_choice_student').prop('checked', false);
-                    $('#pagination_choice_contact').prop('checked', false);
-                }
-                if (id == 'staff') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['staff'][1]) }}');
-                    $('#pagination_choice_student').prop('checked', false);
-                    $('#pagination_choice_all').prop('checked', false);
-                    $('#pagination_choice_contact').prop('checked', false);
-                }
-                if (id == 'contact') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['contact'][1]) }}');
-                    $('#pagination_choice_student').prop('checked', false);
-                    $('#pagination_choice_all').prop('checked', false);
-                    $('#pagination_choice_staff').prop('checked', false);
-                }
-            } else {
-                if (id == 'student') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['student'][0]) }}');
-                }
-                if (id == 'staff') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['staff'][0]) }}');
-                }
-                if (id == 'all') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['all'][0]) }}');
-                }
-                if (id == 'contact') {
-                    $('#paginator').prop('action', '{{ path(pagination.choice['contact'][0]) }}');
-                }
-                $('.paginationChoice').prop('checked', false)
-            }
-            $('#paginator').submit();
-        });
-
-        {% endif %}
-
     </script>
+    {% include '@Pagination/Paginator/script.html.twig' %}
 {% endblock javascripts %}
 
