--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -14,48 +14,57 @@
 {{ form_start(form, form_array) }}
 <div class="container-fluid well" style="padding: 0 15px;">
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-right">
+            <label class="control-label">{{ form.currentSearch.vars.label|trans }}</label>
             <div class="input-group">
-                <label class="control-label" style="text-align: left">{{ form.currentSearch.vars.label|trans }}</label>
                 {{ form_widget(form.currentSearch) }}
                 <div class="input-group-btn">
                     <button class="btn btn-success halflings halflings-search" type="submit"
                             name="paginator[startSearch]"
-                            id="paginator_startSearch" style="height: 33px; margin-top: 24px; ">
+                            id="paginator_startSearch" style="height: 33px; margin-top: -2px; ">
                     </button>
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
-            <label class="control-label" style="text-align: left">{{ form.currentSort.vars.label|trans }}</label>
+        <div class="col-sm-3 text-right">
+            <label class="control-label">{{ form.currentSort.vars.label|trans }}</label>
             {{ form_widget(form.currentSort) }}
         </div>
-        <div class="col-sm-3 text-left">
+        <div class="col-sm-3 text-right">
             {% if form.choice is defined %}
-                <label class="control-label" style="text-align: left">{{ form.choice.vars.label|trans }}</label>
+                <label class="control-label">{{ form.choice.vars.label|trans }}</label>
                 {{ form_widget(form.choice, {'value': form.vars.route}) }}
             {% endif %}
         </div>
         {% if pagination.getTotal > pagination.getLimit %}
-            <div class="col-sm-2 col-sm-offset-1">
+            <div class="col-sm-3 text-right">
                 {{ form_widget(form.lastSearch, {value: pagination.getSearch }) }}
                 {{ form_widget(form.offSet, {value: pagination.getOffSet}) }}
-                <label class="control-label" style="text-align: left">{{ form.limit.vars.label|trans }}</label>
+                <label class="control-label">{{ form.limit.vars.label|trans }}</label>
+                <div class="text-right">
                 <div class="input-group">
                     <div class="input-group-btn">
-                        {{ saveButton({'class': 'btn btn-info halflings halflings-backward', 'additional': 'id="paginator_prev"', 'style': 'height: 34px; margin-top: -1px;'})|raw }}
+                        {{ saveButton({'class': 'btn btn-info halflings halflings-backward', 'additional': 'id="paginator_prev"', 'style': 'height: 33px; margin-top: -2px; '})|raw }}
                     </div>
                     {{ form_widget(form.limit, {'value': '' ~ pagination.limit}) }}
                     <div class="input-group-btn">
-                        {{ saveButton({'class': 'btn btn-info halflings halflings-forward', 'additional': 'id="paginator_next"', 'style': 'height: 34px; margin-top: -1px;'})|raw }}
+                        {{ saveButton({'class': 'btn btn-info halflings halflings-forward', 'additional': 'id="paginator_next"', 'style': 'height: 33px; margin-top: -2px;'})|raw }}
                     </div>
                 </div>
+                </div>
                 {{ form_widget(form.total, {value: pagination.getTotal}) }}
+                {% set pages = pagination.getTotalPages %}
+
+                {% transchoice pages with {'%total%': pagination.getTotal, '%current%': pagination.getCurrentPage, '%pages%': pages, '%first%': pagination.getFirstRecord, '%last%': pagination.getLastRecord} %}
+                pagination.figures
+                {% endtranschoice %}
             </div>
         {% elseif pagination.getTotal > 10 %}
-            <div class="col-sm-2 col-sm-offset-1">
-                <label class="control-label" style="text-align: left">{{ form.limit.vars.label|trans }}</label>
-                {{ form_widget(form.limit, {'value': '' ~ pagination.limit}) }}
+            <div class="col-sm-3 text-right">
+                <label class="control-label">{{ form.limit.vars.label|trans }}</label>
+                <div class="text-right">
+                    {{ form_widget(form.limit, {'value': '' ~ pagination.limit, 'attr': {'style': 'max-width: 150px; width: 150px;'}}) }}
+                </div>
                 {% set pages = pagination.getTotalPages %}
 
                 {% transchoice pages with {'%total%': pagination.getTotal, '%current%': pagination.getCurrentPage, '%pages%': pages, '%first%': pagination.getFirstRecord, '%last%': pagination.getLastRecord} %}
