--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -14,7 +14,7 @@
 {{ form_start(form, form_array) }}
 <div class="container-fluid well" style="padding: 0 15px;">
     <div class="row">
-        <div class="col-sm-3 text-right">
+        <div class="col-sm-2 text-right">
             <label class="control-label">{{ form.currentSearch.vars.label|trans }}</label>
             <div class="input-group">
                 {{ form_widget(form.currentSearch) }}
@@ -26,18 +26,18 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3 text-right">
+        <div class="col-sm-2 text-right">
             <label class="control-label">{{ form.currentSort.vars.label|trans }}</label>
             {{ form_widget(form.currentSort) }}
         </div>
-        <div class="col-sm-3 text-right">
+        <div class="col-sm-2 text-right">
             {% if form.choice is defined %}
                 <label class="control-label">{{ form.choice.vars.label|trans }}</label>
                 {{ form_widget(form.choice, {'value': form.vars.route}) }}
             {% endif %}
         </div>
         {% if pagination.getTotal > pagination.getLimit %}
-            <div class="col-sm-3 text-right">
+            <div class="col-sm-3 col-sm-offset-3 text-right">
                 {{ form_widget(form.lastSearch, {value: pagination.getSearch }) }}
                 {{ form_widget(form.offSet, {value: pagination.getOffSet}) }}
                 <label class="control-label">{{ form.limit.vars.label|trans }}</label>
@@ -60,7 +60,7 @@
                 {% endtranschoice %}
             </div>
         {% elseif pagination.getTotal > 10 %}
-            <div class="col-sm-3 text-right">
+            <div class="col-sm-3 col-sm-offset-3 text-right">
                 <label class="control-label">{{ form.limit.vars.label|trans }}</label>
                 <div class="text-right">
                     {{ form_widget(form.limit, {'value': '' ~ pagination.limit, 'attr': {'style': 'max-width: 150px; width: 150px;'}}) }}
