Year Management Debug Form Tab Submit
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
@@ -2,7 +2,7 @@
 
 {% trans_default_domain "BusybeeInstituteBundle" %}
 
-{% include '@BusybeeInstitute/Calendar/calendarMenu.html.twig' with {'header': 'calendar.year.title'} %}
+{% include '@BusybeeInstitute/Calendar/calendarMenu.html.twig' with {'header': 'calendar.year.title', 'saveName': 'year'} %}
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-3 well">
