--- a/src/Busybee/InstituteBundle/Resources/views/SpecialDays/specialDay.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/SpecialDays/specialDay.html.twig
@@ -6,8 +6,10 @@
 {% block specialday_widget %}
     {% if form.name.vars.value is empty %}{% set panelTitle = 'calendar.specialDay.add'|trans %}{% else %}{% set panelTitle = form.name.vars.value %}{% endif %}
     {% set h3Content = '<div class="collection-actions collection-panel">' %}
-    {% set h3Content = h3Content ~ deleteButton({'title': 'specialDay.delete.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
-    {% set h3Content = h3Content ~ saveButton() %}
+    {% set sday_id = '0' %}
+    {% if form.vars.value is not null %}{% set sday_id = form.vars.value.getId() %}{% endif %}
+    {% set h3Content = h3Content ~ deleteButton({'title': 'specialDay.delete.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;', 'javascript': {'function': 'return removeSpecialDay', 'options': {'id': sday_id, 'year': app.request.get('id')}}}) %}
+    {% set h3Content = h3Content ~ saveButton({'name': 'specialDays'}) %}
     {% set h3Content = h3Content ~ '</div>' %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': panelTitle, 'panelStyle': 'info', 'transDomain': 'BusybeeInstituteBundle'} %}
 	<div class="container-fluid">
