--- a/src/Busybee/InstituteBundle/Resources/views/SpecialDays/specialDaysScript.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/SpecialDays/specialDaysScript.html.twig
@@ -16,14 +16,12 @@
     {% endif %}
     {% endfor %}
 
-    $(document).ready(function () {
-        var hash = window.location.hash.substr(1);
-        if (hash == 'specialDays') {
-            var index = $('#calendarTabs a[href="#specialDays"]').parent();
-            index.prop('class', 'active');
-            clearTabActive();
-            $('#specialDays').addClass('active');
+    function removeSpecialDay(id, year) {
+        if (id > 0) {
+            var path = "{{ path('specialday_delete', {'id': '__id__', 'year': '__year__'}) }}";
+            path = path.replace('__id__', id);
+            path = path.replace('__year__', year);
+            window.open(path, '_self');
         }
-    });
-
+    }
 </script>
