--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendar.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendar.html.twig
@@ -28,12 +28,13 @@
 {% block contentContainer %}
 {{ all_form_errors(fullForm, "div", "alert alert-danger fadeAlert") }}
 {{ form_start(form, {'action': path('year_edit', {'id': id} ) } ) }}
-<div id="calendarTabs">
+	<div id="formTabs">
 	<ul class="nav nav-tabs" role="tablist">
 		{% for name,tab in tabs %}
 			{% set translation = 'BusybeeInstituteBundle' %}
 			{% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
-			<li><a href="#{{ name }}" role="tab" data-toggle="tab">{{ tab.label|trans({}, translation) }}</a></li>
+			<li><a href="#{{ name }}" role="tab" data-toggle="tab"
+				   class="{{ name }}">{{ tab.label|trans({}, translation) }}</a></li>
 		{% endfor %}
 	</ul>
 	{% set active = ' active' %}
@@ -62,29 +63,11 @@
 	{{ parent() }}
     {% include "BusybeeFormBundle:Scripts:jquery.collection.js.html.twig" %}
     <script type="text/javascript">
-		function confirmDayDelete(delUrl) {
-			if (confirm("{{ 'specialDay.delete.confirm'|trans }}")) {
-				document.location = delUrl;
-			}
-		}
-		function confirmTermDelete(delUrl) {
-			if (confirm("{{ 'term.delete.confirm'|trans }}")) {
-				document.location = delUrl;
-			}
-		}
-
 		if ( $(".fadeAlert").length ) {
  	   		$(".fadeAlert").fadeOut(3000);
 		}
-
-
-        function clearTabActive() {
-            $('#year').removeClass('active');
-            $('#terms').removeClass('active');
-            $('#specialDays').removeClass('active');
-            $('#grades').removeClass('active');
-        }
 	</script>
+    {% include '@BusybeeHome/Scripts/formTabSubmitScript.html.twig' with {'route': 'year_edit'} %}
     {% include '@BusybeeInstitute/Grade/gradesScript.html.twig' %}
     {% include '@BusybeeInstitute/Term/termScript.html.twig' %}
     {% include "@BusybeeInstitute/SpecialDays/specialDaysScript.html.twig" %}
