--- a/src/Busybee/InstituteBundle/Resources/views/Grade/edit.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Grade/edit.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain "BusybeeInstituteBundle" %}
 
-{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' with {'header': 'calendar.grade.title', 'name': form.name.vars.value, 'panelParagraph': 'calendar.help.grades'} %}
+{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' with {'header': 'calendar.grade.title', 'name': form.name.vars.value, 'panelParagraph': 'calendar.help.grades', 'saveName': 'grades'} %}
 <div class="col-sm-4 col-sm-offset-8">
     {{ form_widget(form.grades) }}
 </div>
