--- a/src/Busybee/InstituteBundle/Resources/views/Term/term.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Term/term.html.twig
@@ -12,7 +12,7 @@
         {% set term_id = '0' %}
         {% if form.vars.value is not null %}{% set term_id = form.vars.value.getId() %}{% endif %}
         {% set h3Content = h3Content ~ deleteButton({'javascript': {'function': 'return removeTerm', 'options': {'id': term_id, 'year': app.request.get('id')}}, 'title': 'term.delete.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
-        {% set h3Content = h3Content ~ saveButton() %}
+        {% set h3Content = h3Content ~ saveButton({'name': 'terms'}) %}
         {% set h3Content = h3Content ~ '</div>' %}
         {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': termTitle, 'panelStyle': 'info'} %}
 		<div class="container-fluid">
