Integer Validator Added Form Tab return to Family / Person Form Mop up of Learning Groups Defaults added to sortBy in Pagination
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/edit.html.twig
@@ -70,4 +70,5 @@
     {% include 'BusybeeFamilyBundle:Family:script.html.twig' %}
     {% include 'BusybeeHomeBundle:Scripts:monitorForm.html.twig' with {'route': 'family_manage'} %}
     {% include 'BusybeeHomeBundle:Toggle:script.html.twig' %}
+    {% include '@BusybeeHome/Scripts/formTabSubmitScript.html.twig' with {'route': 'family_edit'} %}
 {% endblock javascripts %}
