--- a/src/Busybee/HomeBundle/Resources/views/Scripts/formTabSubmitScript.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/formTabSubmitScript.html.twig
@@ -1,9 +1,19 @@
 <script type="text/javascript" language="JavaScript">
     $('form').submit(function () {
-        var fragment = $(".tab-content .active").attr('id');
-        var path = '{{ path(route, {'id': '__id__', '_fragment': '__fragment__'}) }}';
-        path = path.replace('__id__', '{{ app.request.get('id') }}');
+        var fragment = $('.tab-content > .active').attr('id');
+
+        {% if app.request.get('currentSearch') is defined and app.request.get('limit') is defined %}
+        var path = "{{ path(route, {'id': app.request.get('id'), 'currentSearch': app.request.get('currentSearch'), 'limit': app.request.get('limit'), '_fragment': '__fragment__'}) }}";
+        {% elseif app.request.get('limit') is defined %}
+        var path = "{{ path(route, {'id': app.request.get('id'), 'limit': limit, '_fragment': '__fragment__'}) }}";
+        {% elseif app.request.get('currentSearch') is defined %}
+        var path = "{{ path(route, {'id': app.request.get('id'), 'currentSearch': app.request.get('currentSearch'), '_fragment': '__fragment__'}) }}";
+        {% else %}
+        var path = "{{ path(route, {'id': app.request.get('id'), '_fragment': '__fragment__'}) }}";
+        {% endif %}
+
         path = path.replace('__fragment__', fragment);
+
         $(this).prop('action', path);
         return true;
     });
@@ -17,7 +27,7 @@
         var hash = '#' + window.location.hash.substr(1);
         if (hash != "#") {
             if ($(hash).length > 0) {
-                var key = '#formTabs .' + hash.replace('#', '');
+                var key = '#formTabs > .' + hash.replace('#', '');
                 var index = $(key).parent();
                 $('.active').removeClass('active');
                 index.addClass('active');
@@ -25,5 +35,4 @@
             }
         }
     });
-
 </script>
