--- a/src/Busybee/TimeTableBundle/Resources/views/Activities/activityScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Activities/activityScript.html.twig
@@ -2,6 +2,7 @@
 
 <script type="text/javascript">
     $(".activityList").collection({
+        name_prefix: '{{ form.activities.vars.full_name }}',
         allow_up: false,
         allow_down: false,
         add: '<button title="{{ 'activity.title.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
