--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/edit.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/edit.html.twig
@@ -6,12 +6,18 @@
 
 {% form_theme form 'BusybeeFormBundle:Template:bootstrap.html.twig'
 '@BusybeeForm/Template/jquery.collection.html.twig'
-'BusybeeTimeTableBundle:ActivityGroups:activityGroupsCollection.html.twig' %}
+'BusybeeTimeTableBundle:ActivityGroups:activityGroupsCollection.html.twig'
+'@BusybeeTimeTable/Columns/columnCollection.html.twig'
+'@BusybeeTimeTable/Days/dayCollection.html.twig' %}
 
 {% block title %}{{ parent() }}{{ 'timetable.edit.title'|trans({'%name%': form.vars.value.getFullName}) }}{% endblock title %}
 {% block headerTitle %}{{ 'timetable.edit.title'|trans({'%name%': form.vars.value.getFullName}) }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'timetable.edit.description'|trans }}{% endblock headerLead %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% include '@BusybeeHome/Toggle/style.html.twig' %}
+{% endblock stylesheets %}
 
 {% block contentContainer %}
     {{ form_start(form) }}
@@ -22,16 +28,43 @@
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'timetable.edit.title', 'transDomain': 'BusybeeTimeTableBundle', 'panelParagraph': 'timetable.edit.description', 'name': form.vars.value.getFullName} %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-6 well">
-                {{ form_row(form.name) }}
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-6 well">
+                        {{ form_row(form.name) }}
+                    </div>
+                    <div class="col-sm-6 well">
+                        {{ form_row(form.specialDaySkip) }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 well">
+                        {{ form_row(form.nameShort) }}
+                    </div>
+                    <div class="col-sm-6 well">
+                        {% set data = form.year.vars.value %}
+                        {% if data is empty %}{% set data = form.year.vars.data %}{% endif %}
+                        {{ form_row(form.year, {'value': data}) }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12" style="padding-right: inherit; padding-left: inherit;">
+                        {% set h3Content = '' %}
+                        {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': form.days.vars.label, 'transDomain': 'BusybeeTimeTableBundle', 'panelParagraph': form.days.vars.attr.help, 'panelStyle': 'info'} %}
+                        {{ form_widget(form.days) }}
+                        {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-3 well">
-                {{ form_row(form.nameShort) }}
-            </div>
-            <div class="col-sm-3 well">
-                {% set data = form.year.vars.value %}
-                {% if data is empty %}{% set data = form.year.vars.data %}{% endif %}
-                {{ form_row(form.year, {'value': data}) }}
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-12" style="padding-right: inherit; padding-left: inherit;">
+                        {% set h3Content = '' %}
+                        {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': form.columns.vars.label, 'transDomain': 'BusybeeTimeTableBundle', 'panelParagraph': form.columns.vars.attr.help, 'panelStyle': 'info'} %}
+                        {{ form_widget(form.columns) }}
+                        {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -43,4 +76,7 @@
 {% block javascripts %}
     {{ parent() }}
     {% include '@BusybeeForm/Scripts/jquery.collection.js.html.twig' %}
+    {% include '@BusybeeTimeTable/Columns/columnScript.html.twig' %}
+    {% include '@BusybeeTimeTable/Days/dayScript.html.twig' %}
+    {% include '@BusybeeHome/Toggle/script.html.twig' %}
 {% endblock javascripts %}
