--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -2,6 +2,10 @@
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
+{% extends '@BusybeeHome/Default/headerNotice.html.twig' %}
+
+
+{% block htmlContent %}
 <!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -12,86 +16,77 @@
         {% include 'BusybeeHomeBundle:Default:style.html.twig' %}
     {% endblock stylesheets %}
 
-    {% set containerThemeOverwrite = '' %}
-    {% set headerNotices = '' %}
-    {% if app.user is not null %}
-        {% if app.user.year is not null %}
-            {% set headerNotices = headerNotices ~ 'year.system.warning'|trans({'%year%': app.user.year.name}) %}
-            {% set containerThemeOverwrite = ' containerWarning' %}
-        {% else %}
-            {% set headerNotices = headerNotices ~ 'year.system.current'|trans({'%year%': get_SystemYear(app.user).name}) %}
-        {% endif %}
-    {% endif %}
 
 </head>
 
-	<body>
+<body>
 
-		{% block menuContainer %}
-		{{ include('BusybeeHomeBundle:Menu:main-menu.html.twig') }}
-		{% endblock menuContainer %}
+{% block menuContainer %}
+    {{ include('BusybeeHomeBundle:Menu:main-menu.html.twig') }}
+{% endblock menuContainer %}
 
-		<div class="container theme-showcase" role="main">
+<div class="container theme-showcase" role="main">
 
-			{% block titleContainer %}
-                <div class="jumbotron{{ containerThemeOverwrite }}">
-				<img src="{{ asset(get_setting('Org.Logo', 'img/bee.png')) }}" alt="Busybee" id="bee-logo" />
-				<h2>{% block headerTitle %}Busybee - {{ get_setting('Org.Name') }}{% endblock headerTitle %}</h2>
-				<p class="lead">{% block headerLead %}Busybee{% endblock headerLead %}</p>
-                    {% if headerNotices is not empty %}<p>{{ headerNotices|raw }}</p>{% endif %}
-			</div>
-			{% endblock titleContainer %}
-
-
-			<div class="container-fluid" id="contentContainer">
-			{% block flashMessages %}
-				{% include 'BusybeeHomeBundle:Default:flash.html.twig' %}
-			{% endblock flashMessages %}
-			{% block contentContainer %}
-
-			{{ include('BusybeeHomeBundle:Default:buttons.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:tables.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:thumbnails.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:labels.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:badges.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:dropdowns.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:navs.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:navBars.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:alerts.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:progressBars.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:listGroups.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:panels.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:wells.html.twig') }}
-
-			{{ include('BusybeeHomeBundle:Default:carousel.html.twig') }}
-
-			{% endblock contentContainer %}
-			</div>
-		</div> <!-- /container -->
-
-		<div class="container theme-showcase" id="footerContainer">
-			{% block footerContainer %}
-				{{ include('BusybeeHomeBundle:Default:footer.html.twig') }}
-			{% endblock footerContainer %}
-		</div> <!-- /container footer -->
+    {% block titleContainer %}
+		<div class="jumbotron{{ containerThemeOverwrite }}">
+			<img src="{{ asset(get_setting('Org.Logo', 'img/bee.png')) }}" alt="Busybee" id="bee-logo" />
+			<h2>{% block headerTitle %}Busybee - {{ get_setting('Org.Name') }}{% endblock headerTitle %}</h2>
+			<p class="lead">{% block headerLead %}Busybee{% endblock headerLead %}</p>
+            {% if headerNotices is not empty %}<p>{{ headerNotices|raw }}</p>{% endif %}
+		</div>
+    {% endblock titleContainer %}
 
 
-	{% block javascripts %}
-		{% include "BusybeeHomeBundle:Default:scripts.html.twig" %}
-	{% endblock javascripts %}
+	<div class="container-fluid" id="contentContainer">
+        {% block flashMessages %}
+            {% include 'BusybeeHomeBundle:Default:flash.html.twig' %}
+        {% endblock flashMessages %}
+        {% block contentContainer %}
+
+            {{ include('BusybeeHomeBundle:Default:buttons.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:tables.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:thumbnails.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:labels.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:badges.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:dropdowns.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:navs.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:navBars.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:alerts.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:progressBars.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:listGroups.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:panels.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:wells.html.twig') }}
+
+            {{ include('BusybeeHomeBundle:Default:carousel.html.twig') }}
+
+        {% endblock contentContainer %}
+	</div>
+</div> <!-- /container -->
+
+<div class="container theme-showcase" id="footerContainer">
+    {% block footerContainer %}
+        {{ include('BusybeeHomeBundle:Default:footer.html.twig') }}
+    {% endblock footerContainer %}
+</div> <!-- /container footer -->
 
 
-	</body>
+{% block javascripts %}
+    {% include "BusybeeHomeBundle:Default:scripts.html.twig" %}
+{% endblock javascripts %}
+
+
+</body>
 </html>
+{% endblock htmlContent %}
