--- a/src/Busybee/HomeBundle/Resources/views/Popup/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Popup/template.html.twig
@@ -2,6 +2,9 @@
 
 {% trans_default_domain "BusybeeHomeBundle" %}
 
+{% extends '@BusybeeHome/Default/headerNotice.html.twig' %}
+
+{% block htmlContent %}
 <!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -11,17 +14,6 @@
     {% block stylesheets %}
         {% include 'BusybeeHomeBundle:Popup:style.html.twig' %}
     {% endblock stylesheets %}
-
-    {% set containerThemeOverwrite = '' %}
-    {% set headerNotices = '' %}
-    {% if app.user is not null %}
-        {% if app.user.year is not null %}
-            {% set headerNotices = headerNotices ~ 'year.system.warning'|trans({'%year%': app.user.year.name}) %}
-            {% set containerThemeOverwrite = ' containerWarning' %}
-        {% else %}
-            {% set headerNotices = headerNotices ~ 'year.system.current'|trans({'%year%': get_SystemYear(app.user).name}) %}
-        {% endif %}
-    {% endif %}
 
 </head>
 
@@ -84,3 +76,4 @@
 
 </body>
 </html>
+{% endblock htmlContent %}
