--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -7,7 +7,7 @@
 	<div class="panel-body">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-6">
+                <div class="col-sm-6" style="padding: 0">
                     {% include 'BusybeePersonBundle:Person:phones.html.twig' %}
 				</div>
 				<div class="col-sm-6">
