--- a/web/css/main.css
+++ b/web/css/main.css
@@ -246,10 +246,12 @@ ul.nav li.disabled {
     animation: blink 1.0s step-end infinite alternate;
     border-bottom: 3px solid transparent;
 }
-
 .buttonPrompt {
     font-size: 11px;
     max-height: 30px;
     margin-top: 1px;
+}
 
+button.btn.btn-header {
+    padding: 1px 7px;
 }
