End of Day 10th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Columns/columnCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Columns/columnCollection.html.twig
@@ -27,7 +27,7 @@
                     {{ form_row(form.timetable, {'value': app.request.get('id')}) }}
                 </div>
                 <div class="col-sm-4 well">
-                    {{ form_row(form.dayType) }}
+                    {{ form_row(form.mappingInfo) }}
                 </div>
             </div>
         </div>
