--- a/src/Busybee/TimeTableBundle/Resources/views/Days/assign.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Days/assign.html.twig
@@ -11,4 +11,27 @@
 {% endblock stylesheets %}
 
 {% block contentContainer %}
+    <div id="formTabs">
+        <ul class="nav nav-tabs" role="tablist">
+            {% for tab in tm.getTerms %}
+                <li role="presentation"><a href="#{{ tab.label|replace({' ': '_'}) }}" role="tab"
+                                           data-toggle="tab">{{ tab.label }}</a></li>
+            {% endfor %}
+        </ul>
+        <div class="tab-content">
+            {% set active = ' active' %}
+            {% for key,tab in tm.getTerms %}
+                <div class="tab-pane{{ active }}" id="{{ tab.label|replace({' ': '_'}) }}">
+                    {% include '@BusybeeTimeTable/Days/termTab.html.twig' %}
+                </div>
+                {% set active = '' %}
+            {% endfor %}
+        </div>
+    </div>
 {% endblock contentContainer %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {% set route = 'timetable_day_assignment' %}
+    {% include '@BusybeeHome/Scripts/formTabSubmitScript.html.twig' %}
+{% endblock %}
